--- a/nginx.conf
+++ b/nginx.conf
@@ -45,7 +45,7 @@ server {
         #       # With php-cgi (or other tcp sockets):
         #       fastcgi_pass 127.0.0.1:9000;
                 fastcgi_index index.php;
-                fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_$
+                x`xxxxfastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_$
                 include fastcgi_params;
         }
 
